--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,24 +11,25 @@ dependencies:
     sdk: flutter
 
   # State Management
-  flutter_riverpod: ^2.5.1
-  riverpod_annotation: ^2.3.5
+  flutter_riverpod: ^2.6.1
 
-  # Database (Isar)
-  isar: ^3.1.0+1
-  isar_flutter_libs: ^3.1.0+1
+  # Database (Drift - actively maintained SQLite wrapper)
+  drift: ^2.22.1
+  sqlite3_flutter_libs: ^0.5.28
+  path_provider: ^2.1.5
+  path: ^1.9.0
 
   # Networking
-  dio: ^5.4.3+1
-  connectivity_plus: ^6.0.3
+  dio: ^5.7.0
+  connectivity_plus: ^6.1.1
 
   # WebView for scraping
-  flutter_inappwebview: ^6.0.0
+  flutter_inappwebview: ^6.1.5
 
   # Video Player (media_kit - used by Dartatsu)
-  media_kit: ^1.1.10+1
-  media_kit_video: ^1.2.4
-  media_kit_libs_video: ^1.0.4
+  media_kit: ^1.1.11
+  media_kit_video: ^1.2.5
+  media_kit_libs_video: ^1.0.5
 
   # Permissions
   permission_handler: ^12.0.1
@@ -37,33 +38,29 @@ dependencies:
   saf: ^1.0.4
 
   # Image Caching
-  cached_network_image: ^3.3.1
+  cached_network_image: ^3.4.1
 
   # UI Components
-  flutter_animate: ^4.5.0
+  flutter_animate: ^4.5.2
   shimmer: ^3.0.0
-  
-  # Path utilities
-  path_provider: ^2.1.3
-  path: ^1.9.0
 
   # HTTP
-  http: ^1.2.1
+  http: ^1.2.2
 
   # Shared preferences for simple settings
-  shared_preferences: ^2.2.3
+  shared_preferences: ^2.3.4
 
   # File picker (for SAF fallback)
-  file_picker: ^8.0.3
+  file_picker: ^8.1.7
 
   # UUID for unique IDs
-  uuid: ^4.4.0
+  uuid: ^4.5.1
 
   # Collection utilities
-  collection: ^1.18.0
+  collection: ^1.19.0
 
   # Logging
-  logger: ^2.3.0
+  logger: ^2.5.0
 
   # Cupertino icons
   cupertino_icons: ^1.0.8
@@ -71,9 +68,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
-  build_runner: ^2.4.9
-  isar_generator: ^3.1.0+1
+  flutter_lints: ^5.0.0
+  build_runner: ^2.4.13
+  drift_dev: ^2.22.1
 
 flutter:
   uses-material-design: true
