--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
 
   # Networking
   dio: ^5.7.0
-  connectivity_plus: ^6.1.1
+  connectivity_plus: ^5.0.2
 
   # WebView for scraping
   flutter_inappwebview: ^6.1.5
@@ -71,6 +71,10 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.4.13
   drift_dev: ^2.22.1
+
+dependency_overrides:
+  # Force compatible version to avoid AGP 8.x issues
+  package_info_plus: ^5.0.1
 
 flutter:
   uses-material-design: true
