--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,8 +73,9 @@ dev_dependencies:
   drift_dev: ^2.22.1
 
 dependency_overrides:
-  # Force compatible version to avoid AGP 8.x issues
+  # Force compatible versions to avoid AGP 8.x issues
   package_info_plus: ^8.0.0
+  wakelock_plus: ^1.2.8
 
 flutter:
   uses-material-design: true
