--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,11 @@
+buildscript {
+    ext.kotlin_version = '2.2.0'
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -6,6 +14,17 @@ allprojects {
 }
 
 rootProject.buildDir = "../build"
+
+// Define flutter extension for subprojects that need it
+subprojects {
+    project.ext {
+        flutter = [
+            compileSdkVersion: 36,
+            minSdkVersion: 24,
+            targetSdkVersion: 36
+        ]
+    }
+}
 
 subprojects {
     afterEvaluate { project ->
