fix: Use declarative plugins block for flutter gradle plugin
Flutter 3.24+ requires declarative plugin application

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -23,3 +23,6 @@ plugins {
 }
 
 include ":app"
+
+// Ensure the app is evaluated first so flutter properties are available
+project(':app').projectDir = new File(rootDir, 'app')
