--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "com.android.application"
     id "kotlin-android"
+    id "dev.flutter.flutter-gradle-plugin"
 }
 
 def localProperties = new Properties()
@@ -21,19 +22,9 @@ if (flutterVersionName == null) {
     flutterVersionName = "1.0"
 }
 
-def flutterRoot = localProperties.getProperty("flutter.sdk")
-if (flutterRoot == null) {
-    throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
-}
-
-// Define flutter source before applying plugin
-ext.flutterSourceDir = "../.."
-
-apply plugin: 'dev.flutter.flutter-gradle-plugin'
-
 android {
     namespace = "com.sleepy.anix"
-    compileSdk = 36
+    compileSdk = flutter.compileSdkVersion
     ndkVersion = "27.0.12077973"
     
     compileOptions {
@@ -42,7 +33,7 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = "17"
+        jvmTarget = JavaVersion.VERSION_17
     }
     
     packagingOptions {
@@ -53,11 +44,10 @@ android {
     
     defaultConfig {
         applicationId = "com.sleepy.anix"
-        minSdk = 24
-        targetSdk = 36
+        minSdk = flutter.minSdkVersion
+        targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
-        multiDexEnabled true
     }
 
     buildTypes {
