--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,19 +4,19 @@ on:
   push:
     branches: [main, master]
     tags:
-      - 'v*'
+      - "v*"
   pull_request:
     branches: [main, master]
   workflow_dispatch:
 
 env:
-  FLUTTER_VERSION: '3.38.7'
+  FLUTTER_VERSION: "3.38.7"
 
 jobs:
   build-android:
     name: Build Android APK
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -24,17 +24,16 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: "temurin"
+          java-version: "17"
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: ${{ env.FLUTTER_VERSION }}
-          channel: 'stable'
+          channel: "stable"
           cache: true
 
-      # Cache pub packages
       - name: Cache pub dependencies
         uses: actions/cache@v4
         with:
@@ -45,7 +44,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pub-
 
-      # Cache Gradle
       - name: Cache Gradle
         uses: actions/cache@v4
         with:
@@ -73,7 +71,7 @@ jobs:
           test -f lib/data/models/app_settings.g.dart
 
       - name: Analyze code
-        run: flutter analyze --no-fatal-infos
+        run: flutter analyze --no-fatal-infos --no-fatal-warnings
         continue-on-error: true
 
       - name: Run tests
@@ -81,17 +79,14 @@ jobs:
         continue-on-error: true
 
       - name: Build APK (Debug)
-        run: |
-          flutter build apk --debug 2>&1 | tee build_debug.log
+        run: flutter build apk --debug 2>&1 | tee build_debug.log
         continue-on-error: true
 
       - name: Build APK (Release)
-        run: |
-          flutter build apk --release 2>&1 | tee build_release.log
+        run: flutter build apk --release 2>&1 | tee build_release.log
 
       - name: Build App Bundle (Release)
-        run: |
-          flutter build appbundle --release 2>&1 | tee build_bundle.log
+        run: flutter build appbundle --release 2>&1 | tee build_bundle.log
         continue-on-error: true
 
       - name: Collect build logs
@@ -105,7 +100,7 @@ jobs:
 
       - name: Upload Debug APK
         uses: actions/upload-artifact@v4
-        if: success() || failure()
+        if: always()
         with:
           name: anix-debug-apk
           path: build/app/outputs/flutter-apk/app-debug.apk
@@ -113,6 +108,7 @@ jobs:
 
       - name: Upload Release APK
         uses: actions/upload-artifact@v4
+        if: always()
         with:
           name: anix-release-apk
           path: build/app/outputs/flutter-apk/app-release.apk
@@ -120,7 +116,7 @@ jobs:
 
       - name: Upload App Bundle
         uses: actions/upload-artifact@v4
-        if: success() || failure()
+        if: always()
         with:
           name: anix-release-bundle
           path: build/app/outputs/bundle/release/app-release.aab
@@ -138,7 +134,7 @@ jobs:
     name: Build iOS (No Code Sign)
     runs-on: macos-latest
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
-    
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -147,10 +143,9 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: ${{ env.FLUTTER_VERSION }}
-          channel: 'stable'
+          channel: "stable"
           cache: true
 
-      # Cache pub packages
       - name: Cache pub dependencies
         uses: actions/cache@v4
         with:
@@ -161,7 +156,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pub-
 
-      # Cache CocoaPods
       - name: Cache CocoaPods
         uses: actions/cache@v4
         with:
@@ -179,8 +173,7 @@ jobs:
         run: dart run build_runner build --delete-conflicting-outputs
 
       - name: Build iOS (No Code Sign)
-        run: |
-          flutter build ios --release --no-codesign 2>&1 | tee build_ios.log
+        run: flutter build ios --release --no-codesign 2>&1 | tee build_ios.log
 
       - name: Upload Build Log
         uses: actions/upload-artifact@v4
@@ -195,7 +188,7 @@ jobs:
     needs: [build-android]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
-    
+
     permissions:
       contents: write
 
